--- a/pages/Error404.html
+++ b/pages/Error404.html
@@ -5,6 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ERROR 404</title>
     <link rel="stylesheet" href="../css/error404.css" />
+    <link
+      rel="shortcut icon"
+      href="/img/logo/TheBeatAzul-sinfondochica.png"
+      type="image/x-icon"
+    />
   </head>
   <body>
     <main>
