--- a/pages/music.html
+++ b/pages/music.html
@@ -1,65 +1,125 @@
 <!DOCTYPE html>
 <html lang="es">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=, initial-scale=1.0">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
-     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <link rel="stylesheet" href="../css/homeUsuario.css">
-    <link rel="stylesheet" href="../css/music.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=, initial-scale=1.0" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="../css/homeUsuario.css" />
+    <link rel="stylesheet" href="../css/music.css" />
+    <link
+      rel="shortcut icon"
+      href="/img/logo/TheBeatAzul-sinfondochica.png"
+      type="image/x-icon"
+    />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="navegacion">
-          <nav class="navbar navbar-expand-lg">
-            <div class="container-fluid">
-             <a href="../pages/homeUsuario.html"> <img src="/img/logo/TheBeatAzul-sinfondochica.png" alt="" width="100"></a>
-              <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-                <span class="navbar-toggler-icon"></span>
-              </button>
-              <div class="collapse navbar-collapse" id="navbarSupportedContent">
-                <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <a class="nav-link active text-white" aria-current="page" href="#">Inicio</a>
-                  </li>
-                  <li class="nav-item">
-                    <a class="nav-link text-white" href="#">Categorias</a>
-                  </li>
-                  <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle text-white" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                      Biblioteca</a>
-                    <ul class="dropdown-menu">
-                      <li><a class="dropdown-item text-white bg-transparent" href="#">Playlist</a></li>
-                      <li><a class="dropdown-item text-white bg-transparent" href="#">Lo que mas escuchas</a></li>
-                      <li><a class="dropdown-item text-white bg-transparent" href="#">Descargas</a></li>
-                    </ul>
-                  </li>
-                </ul>
-                <form class="d-flex me-auto" role="search">
-                  <input class="form-control me-2" type="search" placeholder="Buscar" aria-label="Search">
-                  <button class="btn btn-outline-white text-white" type="submit">Buscar</button>
-                </form>
-                <ul class="navbar-nav me-2 mb-2 mb-lg-0">
-                  <li class="nav-item">
-                    <box-icon name='user-circle' class="icon" type='solid' >Mi Cuenta</box-icon>
-                  </li>
-                </ul>
-              </div>
+      <div class="navegacion">
+        <nav class="navbar navbar-expand-lg">
+          <div class="container-fluid">
+            <a href="../pages/homeUsuario.html">
+              <img
+                src="/img/logo/TheBeatAzul-sinfondochica.png"
+                alt=""
+                width="100"
+            /></a>
+            <button
+              class="navbar-toggler"
+              type="button"
+              data-bs-toggle="collapse"
+              data-bs-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent"
+              aria-expanded="false"
+              aria-label="Toggle navigation"
+            >
+              <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <a
+                    class="nav-link active text-white"
+                    aria-current="page"
+                    href="#"
+                    >Inicio</a
+                  >
+                </li>
+                <li class="nav-item">
+                  <a class="nav-link text-white" href="#">Categorias</a>
+                </li>
+                <li class="nav-item dropdown">
+                  <a
+                    class="nav-link dropdown-toggle text-white"
+                    href="#"
+                    role="button"
+                    data-bs-toggle="dropdown"
+                    aria-expanded="false"
+                  >
+                    Biblioteca</a
+                  >
+                  <ul class="dropdown-menu">
+                    <li>
+                      <a
+                        class="dropdown-item text-white bg-transparent"
+                        href="../pages/Error404.html"
+                        >Playlist</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item text-white bg-transparent"
+                        href="../pages/Error404.html"
+                        >Lo que mas escuchas</a
+                      >
+                    </li>
+                    <li>
+                      <a
+                        class="dropdown-item text-white bg-transparent"
+                        href="../pages/Error404.html"
+                        >Descargas</a
+                      >
+                    </li>
+                  </ul>
+                </li>
+              </ul>
+              <form class="d-flex me-auto" role="search">
+                <input
+                  class="form-control me-2"
+                  type="search"
+                  placeholder="Buscar"
+                  aria-label="Search"
+                />
+                <button class="btn btn-outline-white text-white" type="submit">
+                  Buscar
+                </button>
+              </form>
+              <ul class="navbar-nav me-2 mb-2 mb-lg-0">
+                <li class="nav-item">
+                  <box-icon name="user-circle" class="icon" type="solid"
+                    >Mi Cuenta</box-icon
+                  >
+                </li>
+              </ul>
             </div>
-          </nav>
-        </div>
-  
-      </header>
+          </div>
+        </nav>
+      </div>
+    </header>
 
-      <main>  
-        <section class="centrar text-white">
-            <h2>Recien Escuchadas</h2>
-        </section>
-        
-        <div class="container">
-            <div class="song-details" id="music">
-                <!-- <div class="d-flex justify-content-center align-items-center">
+    <main>
+      <section class="centrar text-white">
+        <h2>Recien Escuchadas</h2>
+      </section>
+
+      <div class="container">
+        <div class="song-details" id="music">
+          <!-- <div class="d-flex justify-content-center align-items-center">
                     <img src="../imagenHomeUsuario/mr1.webp" width="350" alt="Imagen de la canción">
                 </div>
                 <div class="my-3">
@@ -71,12 +131,35 @@
                     <source src="" 
                     type="audio/mpeg">  
                 </audio> -->
-               
-            </div>
         </div>
-      </main>
-      <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
-      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-      <script src="../js/music.js"></script>
-</body>
+      </div>
+    </main>
+    <footer class="text-white py-4">
+      <div class="container">
+        <div class="row">
+          <div class="col-md-6 text-center text-md-left mb-3 mb-md-0 my-5">
+            <!-- Columna izquierda con iconos de redes sociales -->
+            <box-icon type="logo" name="facebook-circle"></box-icon>
+            <box-icon type="logo" name="instagram-alt"></box-icon>
+            <box-icon name="twitter" type="logo"></box-icon>
+            <!-- Añade más enlaces de redes sociales según necesites -->
+          </div>
+          <div class="col-md-6 text-center text-md-right">
+            <!-- Columna derecha con el logo de tu página -->
+            <img
+              src="/img/logo/TheBeatAzul-sinfondochica.png"
+              width="80"
+              alt="logo"
+            />
+          </div>
+        </div>
+      </div>
+    </footer>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+      crossorigin="anonymous"
+    ></script>
+    <script src="../js/music.js"></script>
+  </body>
 </html>
